# Findex

./: CMakeLists.txt  LICENSE  README.md
core/: appdata.cpp  appdatapath.cpp  count_volumes.cpp  elevate.cpp  findex.cpp  indexer.cpp  main.cpp  makeadministrator.cpp  wstring_to_utf8.cpp
core/include/: appdatapath.h  count_volumes.hpp  db_controller.hpp  elevate.hpp  findex.hpp  indexer.h  indexer.hpp  wstring_to_utf8.hpp
gui/: MainWindow.cpp  MainWindow.h  Worker.h  main.cpp
